--- a/sass/modules/_header.scss
+++ b/sass/modules/_header.scss
@@ -9,7 +9,7 @@ header{
    width: 100%;
    left: 0;
    right: 0;
-   z-index: 9999;
+   z-index: 99999;
    a[rel="home"]{
       transition: opacity 0.5s ease-in-out;
       &:hover{
